--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			<h1>Git</h1>
 		</header>
 		<ul>
+			<li>sync.egoing</li>
 			<li>Git이란?</li>
 			<li>버전</li>
 			<li>Branch</li>
@@ -21,6 +22,7 @@
 			<li>push.egoing</li>
 			<li>pull.leezche</li>
 			<li>conflict.leezche</li>
+			<li>conflict.egoing</li>
 		</ul>	
 	</body>
 </html>
